--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <button id="close-nav-btn">&times;</button>
         <ul>
           <li>
-            <a href="#" class="nav-link active" data-page="map-view"
+            <a href="#" class="nav-link" data-page="map-view"
               >Map View</a
             >
           </li>
@@ -60,8 +60,23 @@
       </nav>
 
       <main class="main-content">
+
+        <!-- Landing Page -->
+        <div id="landing-page" class="page active-page">
+          <div class="landing-page-container">
+            <div class="landing-card" id="go-to-report">
+              <h3>Make a Report</h3>
+              <p>Report a new facility issue.</p>
+            </div>
+            <div class="landing-card" id="go-to-map">
+              <h3>UMT Map</h3>
+              <p>View all reported issues on the map.</p>
+            </div>
+          </div>
+        </div>
+        
         <!-- Map View -->
-        <div id="map-view" class="page active-page">
+        <div id="map-view" class="page">
           <div id="map"></div>
           <button id="current-location-btn" class="fab">📍</button>
           <button id="refresh-map-btn" class="fab">🔄</button>
@@ -158,14 +173,14 @@
               with photos and location tagging.
             </p>
             <p>Version: 1.0.0</p>
-            <p>Developed by: [Your Group Name]</p>
+            <p>Developed by: Group 10</p>
             <div class="team-members">
               <h3>Team Members:</h3>
               <ul>
-                <li>Member 1 - Role</li>
-                <li>Member 2 - Role</li>
-                <li>Member 3 - Role</li>
-                <li>Member 4 - Role</li>
+                <li>ZAWAWI IRFAN BIN ZAINUDDIN (S72375)</li>
+                <li>ALFAN NA IM BIN SHABARUDDIN (S72505)</li>
+                <li>NAZIRUL IMRAN BIN ISMAIL (S72574)</li>
+                <li>KAMAL IZZAT BIN AHMAD RIDHAUDIN (S72460)</li>
               </ul>
             </div>
           </div>
