Make logo clickable to navigate to home page
Added an ID to the logo image and an event listener in app.js to navigate to the landing page when the logo is clicked. Updated styles to show pointer cursor on hover for better UX.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <header class="app-header">
         <div class="header-left">
           <button id="menu-btn">☰</button>
-          <img src="icons/logo.png" alt="UMT Logo" class="app-logo" />
+          <img src="icons/logo.png" alt="UMT Logo" class="app-logo" id="logo-btn"/>
           <h1>UMT Facility Reporter</h1>
         </div>
       </header>
@@ -74,7 +74,7 @@
             </div>
           </div>
         </div>
-        
+
         <!-- Map View -->
         <div id="map-view" class="page">
           <div id="map"></div>
