--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="header-left">
           <button id="menu-btn">☰</button>
           <img src="icons/logo.png" alt="UMT Logo" class="app-logo" id="logo-btn"/>
-          <h1>UMT Facility Reporter</h1>
+          <h1 id="title-btn">UMT Facility Reporter</h1>
         </div>
       </header>
 
