Add 'My Reports' card to landing page
Introduced a new 'My Reports' card on the landing page, allowing users to view the status of their reports. Updated event listeners in app.js to handle navigation to the new section and adjusted landing page layout in styles.css for improved card arrangement.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
               <h3>UMT Map</h3>
               <p>View all reported issues on the map.</p>
             </div>
+            <div class="landing-card" id="go-to-my-reports">
+              <h3>My Reports</h3>
+              <p>View the status of your reports.</p>
+            </div>
           </div>
         </div>
 
