Update app name to 'UMT Facility Feedback Reporter'
Renamed the app throughout the UI, manifest, and service worker from 'UMT Facility Reporter' to 'UMT Facility Feedback Reporter' for consistency and clarity. Updated manifest description for improved context. Incremented service worker cache version to v12.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="header-left">
           <button id="menu-btn">☰</button>
           <img src="icons/logo.png" alt="UMT Logo" class="app-logo" id="logo-btn"/>
-          <h1 id="title-btn">UMT Facility Reporter</h1>
+          <h1 id="title-btn">UMT Facility Feedback Reporter</h1>
         </div>
       </header>
 
@@ -170,7 +170,7 @@
 
         <!-- About Page -->
         <div id="about" class="page">
-          <h2>About UMT Facility Reporter</h2>
+          <h2>About UMT Facility Feedback Reporter</h2>
           <div class="about-content">
             <p>
               This app allows UMT students to report facility issues on campus
