Update map button titles and cache version
Added descriptive title attributes to map view buttons in index.html for better accessibility. Changed the order of function calls in initApp for improved initialization flow. Updated service worker cache name to v16.

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <!-- Map View -->
         <div id="map-view" class="page">
           <div id="map"></div>
-          <button id="current-location-btn" class="fab">📍</button>
-          <button id="refresh-map-btn" class="fab">🔄</button>
-          <button id="new-report-btn" class="fab primary">+</button>
+          <button id="current-location-btn" class="fab" title="Current Location">📍</button>
+          <button id="refresh-map-btn" class="fab" title="Refresh Map">🔄</button>
+          <button id="new-report-btn" class="fab primary" title="New Report">+</button>
         </div>
 
         <!-- Report Issue -->
