Add 'use current location' button to location modal
Introduced a button in the location selection modal that allows users to set the map marker to their current geolocation. Updated app.js to handle geolocation retrieval and marker movement, enhanced styles for the new button, and incremented the service worker cache version.

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
           <span class="close-modal">&times;</span>
           <h3>Select Location on Map</h3>
           <div id="location-map"></div>
+          <button id="modal-current-location-btn" class="fab modal-fab" title="Use My Current Location">📍</button>
           <button id="confirm-location-btn">Confirm Location</button>
         </div>
       </div>
