Add camera switch functionality to report form
Introduced a button to switch between front and rear cameras in the camera modal. Updated camera initialization logic to support toggling camera facing mode and improved error handling for unavailable cameras. Updated UI and styles to accommodate the new switch camera button.

--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
         <div class="modal-content">
           <span class="close-modal">&times;</span>
           <video id="camera-view" autoplay></video>
+          <div class="camera-controls-overlay">
+            <button id="switch-camera-btn" class="fab" title="Switch Camera">🔄</button>
+          </div>
           <button id="capture-btn">Capture Photo</button>
           <canvas id="canvas" style="display: none"></canvas>
         </div>
