Refactor camera modal button layout and styles
Moved 'Capture Photo' and 'Switch Camera' buttons into a new .camera-bottom-controls container at the bottom of the camera modal. Updated CSS to style the new container and its buttons for improved layout and appearance.

--- a/index.html
+++ b/index.html
@@ -196,10 +196,12 @@
         <div class="modal-content">
           <span class="close-modal">&times;</span>
           <video id="camera-view" autoplay></video>
-          <div class="camera-controls-overlay">
-            <button id="switch-camera-btn" class="fab" title="Switch Camera">🔄</button>
+          
+          <div class="camera-bottom-controls">
+            <button id="capture-btn">Capture Photo</button>
+            <button id="switch-camera-btn" title="Switch Camera">🔄</button>
           </div>
-          <button id="capture-btn">Capture Photo</button>
+
           <canvas id="canvas" style="display: none"></canvas>
         </div>
       </div>
