Add dark mode theme with toggle switch
Introduced a dark mode theme with a toggle switch in the navigation bar. The selected theme is persisted in localStorage and applied on app initialization. Updated styles and UI components to support dark mode appearance.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
             <a href="#" class="nav-link" data-page="gallery">Photo Gallery</a>
           </li>
           <li><a href="#" class="nav-link" data-page="about">About</a></li>
+
+          <li>
+            <div class="theme-switch-wrapper">
+              <span>Dark Mode</span>
+              <label class="theme-switch">
+                <input type="checkbox" id="theme-switch">
+                <span class="slider round"></span>
+              </label>
+            </div>
+          </li>
+
         </ul>
       </nav>
 
