Add map legend and color-coded category pins
Introduced a map legend to display category colors and updated map pins to use distinct colors based on report categories. Adjusted UI text for clarity, added legend styles, and incremented service worker cache version.

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         <div id="landing-page" class="page active-page">
           <div class="landing-page-container">
             <div class="landing-card" id="go-to-report">
-              <h3>Make a Report</h3>
+              <h3>Report Issue</h3>
               <p>Report a new facility issue.</p>
             </div>
             <div class="landing-card" id="go-to-map">
-              <h3>UMT Map</h3>
+              <h3>View Map</h3>
               <p>View all reported issues on the map.</p>
             </div>
             <div class="landing-card" id="go-to-my-reports">
@@ -92,10 +92,13 @@
 
         <!-- Map View -->
         <div id="map-view" class="page">
-          <div id="map"></div>
-          <button id="current-location-btn" class="fab" title="Current Location">📍</button>
-          <button id="refresh-map-btn" class="fab" title="Refresh Map">🔄</button>
-          <button id="new-report-btn" class="fab primary" title="New Report">+</button>
+              <div id="map"></div>
+              
+              <div id="map-legend"></div>
+              
+              <button id="current-location-btn" class="fab" title="Current Location">📍</button>
+              <button id="refresh-map-btn" class="fab" title="Refresh Map">🔄</button>
+              <button id="new-report-btn" class="fab primary" title="New Report">+</button>
         </div>
 
         <!-- Report Issue -->
